--- a/Main/Numberchecker.html
+++ b/Main/Numberchecker.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Number Checker</title>
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,9 @@
         <li><a href="Calculator.html">Calculator</a></li>
         <li><a href="Numberchecker.html">Number Checker</a></li>
         <li><a href="StringChecker.html">String Checker</a></li>
+        <li><a href="ArrayPrinter.html">Array Printer</a></li>
     </nav>
+
     <div id="numberchecker">
         <h1 id="heading2">Enter A Number</h1>
         <p>I'll let you know if its +ve, -ve or zero</p>
@@ -26,21 +28,21 @@
 
 
 </body>
-<script >
+<script>
     function CheckNumber() {
-    const number = parseFloat(document.getElementById('number').value);
-    const resultElement = document.getElementById('result');
+        const number = parseFloat(document.getElementById('number').value);
+        const resultElement = document.getElementById('result');
 
-    if (isNaN(number)) {
-        resultElement.textContent = "Please Enter a Number!";
-    } else if (number > 0) {
-        resultElement.textContent = "The number is Positive.";
-    } else if (number < 0) {
-        resultElement.textContent = "The number is Negative.";
-    } else {
-        resultElement.textContent = "The number is Zero.";
+        if (isNaN(number)) {
+            resultElement.textContent = "Please Enter a Number!";
+        } else if (number > 0) {
+            resultElement.textContent = "The number is Positive.";
+        } else if (number < 0) {
+            resultElement.textContent = "The number is Negative.";
+        } else {
+            resultElement.textContent = "The number is Zero.";
+        }
     }
-}
 </script>
 
 </html>
