--- a/Main/StringChecker.html
+++ b/Main/StringChecker.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>String Checker</title>
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,9 +14,11 @@
         <li><a href="Calculator.html">Calculator</a></li>
         <li><a href="Numberchecker.html">Number Checker</a></li>
         <li><a href="StringChecker.html">String Checker</a></li>
+        <li><a href="ArrayPrinter.html">Array Printer</a></li>
     </nav>
+
     <div id="string">
-        <h1 id="heading3">String Checker</h1>
+        <h1 id="heading4">String Checker</h1>
         <p>Enter a string and a character to find how many times the character appears in the string.</p>
         <div id="labelling">
             <label for="inputString">String:</label><br>
@@ -31,7 +33,7 @@
     </div>
 
     <script>
-        function countOccurrences(str, char) {
+        function counter(str, char) {
             let count = 0;
             for (let i = 0; i < str.length; i++) {
                 if (str[i] === char) {
@@ -41,15 +43,16 @@
             return count;
         }
 
-        function check(){
+        function check() {
             const inputString = document.getElementById("inputString").value;
             const searchChar = document.getElementById("searchChar").value;
 
             if (inputString && searchChar && searchChar.length === 1) {
-                const x = countOccurrences(inputString, searchChar);
+                const x = counter(inputString, searchChar);
                 document.getElementById("result").innerText = `Your character appears ${x} times.`;
-            } else {
-                document.getElementById("result").innerText ="Please provide a valid string and a single character.";
+            }
+            else {
+                document.getElementById("result").innerText = "Please provide a valid string and a single character.";
             }
         };
     </script>
