--- a/Main/t4-ArrayPrinter.html
+++ b/Main/t4-ArrayPrinter.html
@@ -11,10 +11,10 @@
 
 <body>
     <nav>
-        <li><a href="Calculator.html">Calculator</a></li>
-        <li><a href="Numberchecker.html">Number Checker</a></li>
-        <li><a href="StringChecker.html">String Checker</a></li>
-        <li><a href="ArrayPrinter.html">Array Printer</a></li>
+        <li><a href="t1-Calculator.html">Calculator</a></li>
+        <li><a href="t2-Numberchecker.html">Number Checker</a></li>
+        <li><a href="t3-StringChecker.html">String Checker</a></li>
+        <li><a href="t4-ArrayPrinter.html">Array Printer</a></li>
     </nav>
 
     <div id="array">
