--- a/Main/t1-Calculator.html
+++ b/Main/t1-Calculator.html
@@ -10,27 +10,23 @@
 </head>
 
 <body>
-
     <nav>
-        <li><a href="Calculator.html">Calculator</a></li>
-        <li><a href="Numberchecker.html">Number Checker</a></li>
-        <li><a href="StringChecker.html">String Checker</a></li>
-        <li><a href="ArrayPrinter.html">Array Printer</a></li>
+        <li><a href="t1-Calculator.html">Calculator</a></li>
+        <li><a href="t2-Numberchecker.html">Number Checker</a></li>
+        <li><a href="t3-StringChecker.html">String Checker</a></li>
+        <li><a href="t4-ArrayPrinter.html">Array Printer</a></li>
     </nav>
 
     <div class="calculator">
         <h1 id="heading">CALCULATOR</h1>
         <div class="display" id="display">0</div>
         <div class="keys">
-
             <button class="equal" onclick="calculate()">=</button>
 
-            <button class="operator" onclick="SelectSign('/')">/</button>
-            <button class="operator" onclick="SelectSign('*')">x</button>
-            <button class="operator" onclick="SelectSign('-')">-</button>
-            <button class="operator" onclick="SelectSign('+')">+</button>
-
-
+            <button class="sign" onclick="SelectSign('/')">/</button>
+            <button class="sign" onclick="SelectSign('*')">x</button>
+            <button class="sign" onclick="SelectSign('-')">-</button>
+            <button class="sign" onclick="SelectSign('+')">+</button>
 
             <button onclick="ClickAdd(1)">1</button>
             <button onclick="ClickAdd(2)">2</button>
@@ -52,8 +48,7 @@
         </div>
     </div>
 
-
 </body>
-<script src="logic.js"></script>
+<script src="logicForCalculator.js"></script>
 
 </html>
