--- a/Main/t3-StringChecker.html
+++ b/Main/t3-StringChecker.html
@@ -11,10 +11,10 @@
 
 <body>
     <nav>
-        <li><a href="Calculator.html">Calculator</a></li>
-        <li><a href="Numberchecker.html">Number Checker</a></li>
-        <li><a href="StringChecker.html">String Checker</a></li>
-        <li><a href="ArrayPrinter.html">Array Printer</a></li>
+        <li><a href="t1-Calculator.html">Calculator</a></li>
+        <li><a href="t2-Numberchecker.html">Number Checker</a></li>
+        <li><a href="t3-StringChecker.html">String Checker</a></li>
+        <li><a href="t4-ArrayPrinter.html">Array Printer</a></li>
     </nav>
 
     <div id="string">
@@ -33,26 +33,31 @@
     </div>
 
     <script>
-        function counter(str, char) {
+        function counter(str, char) 
+        {
             let count = 0;
-            for (let i = 0; i < str.length; i++) {
-                if (str[i] === char) {
+            for (let i = 0; i < str.length; i++) 
+            {
+                if (str[i] === char) 
+                {
                     count++;
                 }
             }
             return count;
         }
 
-        function check() {
+        function check() 
+        {
             const inputString = document.getElementById("inputString").value;
             const searchChar = document.getElementById("searchChar").value;
 
-            if (inputString && searchChar && searchChar.length === 1) {
+            if (inputString && searchChar && searchChar.length === 1) 
+            {
                 const x = counter(inputString, searchChar);
                 document.getElementById("result").innerText = `Your character appears ${x} times.`;
             }
             else {
-                document.getElementById("result").innerText = "Please provide a valid string and a single character.";
+                document.getElementById("result").innerText = "Please Enter String!";
             }
         };
     </script>
